fixed spacing for about page

--- a/src/Pages/About/about.css
+++ b/src/Pages/About/about.css
@@ -11,10 +11,10 @@
 
 .page-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: column;
     align-items: center;
-    gap: 25px;
+    height: 100vh;
 }
 
 .page-container span {
